--- a/my_first_vsc.html
+++ b/my_first_vsc.html
@@ -10,7 +10,7 @@
     <h1>ВКР</h1>
     <p>Вступление</p>
     <h2 class="paragraph">Заголовок 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quaerat at suscipit magnam quis odit tenetur voluptatum nisi laboriosam porro sit, deleniti, modi ratione aliquam explicabo laborum perferendis eum cum?</p>
+    <p class="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quaerat at suscipit magnam quis odit tenetur voluptatum nisi laboriosam porro sit, deleniti, modi ratione aliquam explicabo laborum perferendis eum cum?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium numquam nulla veritatis! Totam provident aspernatur, doloremque quis cumque nisi saepe nam nobis natus, voluptate voluptatem eaque suscipit nulla nemo dignissimos?</p>
     <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam iusto dicta rem perferendis cupiditate, totam porro non beatae nostrum quia quis explicabo sed maxime corporis ipsum voluptate assumenda mollitia cumque.</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dignissimos culpa ipsum eligendi expedita. Esse saepe repudiandae totam, vero iusto praesentium, architecto sequi facere necessitatibus consequatur voluptatem nisi itaque aliquid!</span>
     <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro repudiandae, consectetur repellendus fugit ad aliquam iusto natus esse molestias quia voluptatibus commodi beatae quidem, est temporibus, ipsa architecto ratione sint.</div>
